--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ addons:
     organization: "thebuccaneer-github"
     token: $TheBuccaneer
 
-#script:
+script:
 #  # the following command line builds the project, runs the tests with coverage and then execute the SonarCloud analysis
 #  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar
+- sonar-scanner
